maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:38: error: not found: value getIndiction
      if (getIndiction(l,c)!=9999){
          ^